lab-hpa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-server
  labels:
    app: test-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-server
  template:
    metadata:
      labels:
        app: test-server
    spec:
      containers:
      - name: test-server
        image: docker.io/dennischou/test-server:v1.1.2
        resources:
          requests:
            cpu: 20m
